src/snapshots/aidl_parser__tests__annotation5.snap
---
source: src/lib.rs
expression: res

---
Some(Annotation(
  name: "@AnnotationName",
  key_values: {
    "Hello": Some("\"World\""),
    "Hi": None,
    "Servus": Some("3"),
  },
))
