src/snapshots/aidl_parser__tests__const_with_annotation.snap
---
source: src/lib.rs
expression: res

---
Const(
  name: "CONST_NAME",
  const_type: Type(
    name: "TypeName",
    kind: Custom,
    generic_types: [],
    definition: None,
    symbol_range: "...",
  ),
  value: "123",
  annotations: [
    Annotation(
      name: "@AnnotationName",
      key_values: {},
    ),
  ],
  doc: None,
  symbol_range: "...",
  full_range: "...",
)
