src/snapshots/aidl_parser__tests__enum_with_javadoc.snap
---
source: src/lib.rs
expression: res

---
Enum(
  name: "Tomato",
  elements: [
    EnumElement(
      name: "ELEMENT1",
      value: None,
      doc: Some("ELEMENT1 documentation"),
      symbol_range: "...",
      full_range: "...",
    ),
    EnumElement(
      name: "ELEMENT2",
      value: None,
      doc: None,
      symbol_range: "...",
      full_range: "...",
    ),
    EnumElement(
      name: "ELEMENT3",
      value: None,
      doc: Some("ELEMENT3 documentation"),
      symbol_range: "...",
      full_range: "...",
    ),
  ],
  annotations: [],
  doc: Some("Enum documentation"),
  full_range: "...",
  symbol_range: "...",
)
